# FLUTE-WELL

./: Cargo.toml  LICENSE  README.md
resources/songs/: Twinkle_Twinkle_Little_Star.mid
src/: lib.rs  main.rs  midi_importer.rs  player.rs  util.rs
src/engine/: mod.rs  scheduler.rs  windows.rs
src/model/: config.rs  mapper.rs  mod.rs  song.rs
src/model/mappings/: mod.rs  windows.rs
