[package]
name = "FLUTE_WELL"
authors = ["0xTas"]
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.29"
rand = "0.9.2"
ctrlc = "3.5.1"
anyhow = "1.0.100"
spin_sleep = "1.3.3"
env_logger = "0.11.8"
serde_json = "1.0.145"
active-win-pos-rs = "0.9.1"

[dependencies.clap]
version = "4.5.53"
features = ["derive"]

[dependencies.serde]
version = "1.0.228"
features = ["derive"]

[dependencies.windows]
version = "0.62.2"
features = ["Win32_UI_Input_KeyboardAndMouse", "Win32_System_Threading"]
optional = true

[features]
default = ["windows-backend"]
windows-backend = ["windows"]