[package]
name = "FLUTE_WELL"
description = "Import and play MIDI songs on the ANIMAL WELL flute!"
authors = ["Tas <root@0xTas.dev>"]
version = "0.2.1"
edition = "2024"
license = "MIT"

[dependencies]
log = "0.4.29"
ctrlc = "3.5.1"
midly = "0.5.3"
anyhow = "1.0.100"
spin_sleep = "1.3.3"
env_logger = "0.11.8"
active-win-pos-rs = "0.9.1"

[dependencies.clap]
version = "4.5.53"
features = ["derive"]

[dependencies.windows]
optional = true
version = "0.62.2"
features = ["Win32_UI_Input_KeyboardAndMouse", "Win32_System_Threading"]

[features]
default = ["wininput"]
wininput = ["windows"]